--migrate probability experiments to external library

--- a/.classpath
+++ b/.classpath
@@ -24,5 +24,6 @@
 	<classpathentry kind="lib" path="libs/processing/jogl-all-natives-macos-x86_64.jar"/>
 	<classpathentry kind="lib" path="libs/processing/jogl-all-natives-windows-amd64.jar"/>
 	<classpathentry kind="lib" path="libs/base_JavaProjTools_Stats.jar"/>
+	<classpathentry kind="lib" path="libs/base_JavaProjTools_Probability.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
