--remove RT source and use jar instead

--- a/.classpath
+++ b/.classpath
@@ -25,5 +25,6 @@
 	<classpathentry kind="lib" path="libs/processing/jogl-all-natives-windows-amd64.jar"/>
 	<classpathentry kind="lib" path="libs/base_JavaProjTools_Stats.jar"/>
 	<classpathentry kind="lib" path="libs/base_JavaProjTools_Probability.jar"/>
+	<classpathentry kind="lib" path="libs/base_JavaProjTools_DistRT.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
